--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\cpapa\\Anaconda3\\python.exe"
+    "python.pythonPath": "/home/christos/anaconda3/envs/RejectionSampler/bin/python"
 }
